[workspace]
resolver = "2"
members = [
    "hivemqtt-core",
    "hivemqtt-macros"
]


[workspace.package]
edition = "2024"
keywords = ["mqtt", "network", "hivemq"]
categories = ["mqtt", "network"]
authors = [
    "Tolumide Shopein <tolumideshopein@gmail.com>"
]

[package]
name = "hivemqtt"
readmme = "README.md"