[workspace]
resolver = "2"
members = [
    "hivemqtt-core",
    "hivemqtt-macros"
]


[workspace.package]
edition = "2021"
keywords = ["mqtt", "network", "hivemq"]
categories = ["mqtt", "network"]
version = "0.1.0"
authors = [
    "Tolumide Shopein <tolumideshopein@gmail.com>"
]

# [package]
# name = "hivemqtt"
# readmme = "README.md"