[package]
name = "hivemqtt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

categories = ["network-programming"]
keywords = ["mqtt", "iot", "mqttv5", "client"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
asyncx = []
syncx = []
wasm = ["dep:js-sys", "dep:wasm-bindgen"]
default = ["asyncx", "syncx", "wasm"]

[dependencies]
bytes = "1.7.1"
derive_more = { version = "1.0.0", features = ["display"]}
thiserror = "=1.0.24"
hivemqtt-macros = { path = "../hivemqtt-macros" }
tracing = { version = "0.1.41", optional = true }
async-channel = { version = "2.3.1" }
futures = "0.3.31"


js-sys = { version = "0.3.77", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }