[package]
name = "hivemqtt_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

categories = ["network-programming"]
keywords = ["mqtt", "iot", "mqttv5", "client"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "hivemqtt_core"


[features]
asyncx = []
syncx = []
default = ["asyncx"]

[dependencies]
bytes = "1.7.1"
derive_more = { version = "1.0.0", features = ["display"]}
thiserror = "=1.0.24"
hivemqtt-macros = { path = "../hivemqtt-macros" }
tracing = { version = "0.1.41", optional = true }
async-channel = { version = "2.3.1" }
futures = "0.3.31"



