[package]
name = "hivemqtt-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.76", features = ["full", "extra-traits"]}
# syn = { version = "2.0.76" }
quote = "1.0.37"
proc-macro2 = { version = "1.0.86", default-features = false }


[dev-dependencies]
trybuild = "1.0.99"